  - new define in cms_config class CMS_UPLOADS_URL
  - Remove GUI functionality for managing UDT's (udt's will be replaced by simple_plugins)
  - Replace OneEleven admin theme with the Marigold fork that uses fontawesome.
  - Sitedown mode now throws a 503 exception and outputs a 503 error code
  - The 503 error handler (maintenance mode) is now an Error Page.
  - Removed previously deprecated CMSModule::ListUserTags() and CMSModule::CallUserTag() methods.
  - UserTagOperations class is now merely a compatibility stub
  - Impement new simple_plugin API.

CMSContentManager - remember to bump version
  - Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL

FileManager - remember to bump version
  - modified to use CMS_ROOT_URL


Version 2.2.2 - Hearts Content
----------------------------------
Core - General
 - Additional security improvement in CMSModule::GetTemplateResource().
 - Now Smarty_CMS is no longer derived from SmartyBC (uses our own wrapper class) which prevents all occurrences of {php} tags from running.
 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo.
 - Fixes to parsing and generating moduleinfo.ini files.
 - Disallow any resource specifications with a * or a /.
     * This also means that no file resource specifications with path information will be permitted.
 - Move mact preprocessing to AFTER the template_top has been processed.  So order of processing (for module actions on the frontend is)
     a:  template top
     b:  mact preprocessing (if enabled, which is the default)
     c:  template body
     d:  template head
 - Fix sureGetNodeByAlias to check if the input is numeric. If it is, assume that it is a page id, not an alias.